--- a/src/Styles/AboutPage.css
+++ b/src/Styles/AboutPage.css
@@ -1,5 +1,5 @@
 :root{
-    --font-family: "Pathway Extreme", "Sans-serif";
+    font-family: "Proxima Nova", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --width: 100%;
     --max-width: 1200px;
 }
@@ -14,8 +14,8 @@
 .custom-about-container-1 {
     width: var(--width);
     max-width: var(--max-width);
-    min-height: 70vh;
-    font-family: var(--font-family);
+    min-height: 70vh !important;
+    font-family: --font-family;
     animation: SlideInUp 0.5s ease-in-out;
 }
 @keyframes SlideInUp{
@@ -69,13 +69,13 @@
     transition: transform 0.6s ease-in-out, top 0.5s ease-in;
 }
 .diamond-left:hover{
-    top:90px;
+    top: 80px;
     transform: scale(1.03);
 }
 
 .diamond-right {
     top: 330px;
-    left: 430px;
+    left: 380px;
     transition: transform 0.6s ease-in-out, top 0.5s ease-in;
 }
 .diamond-right:hover{
@@ -85,11 +85,11 @@
 
 .diamond-bottom {
     top: 330px;
-    left: 200px;
-    transition: transform 0.6s ease-in-out, left 0.5s ease-in;
+    left: 150px;
+    transition: transform 0.6s ease-in-out, top 0.5s ease-in;
 }
 .diamond-bottom:hover{
-    left:190px;
+    top: 350px;
     transform: scale(1.03);
 }
 
@@ -100,16 +100,20 @@
 .custom-about-container-2{
     width: var(--width);
     max-width: var(--max-width);
-    min-height: 60vh;
+    min-height: 50vh;
     background-color: #EAEBEF;
-    font-family: var(--font-family);
 }
 .Mission-image{
     object-fit: cover;
     width: 50%;
     height: 50%;
 }
-
+h1{
+    font-family: 'Urbanist', sans-serif;
+}
+p{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+}
 /* Container 3 */
 
 .custom-about-container-3{
@@ -225,7 +229,6 @@
         grid-template-columns: repeat(3, 210px);
         grid-template-rows: repeat(3, 210px);
         gap: 5px;
-        position: relative;
     }
     
     .diamond {
