--- a/src/Styles/ContactPage.css
+++ b/src/Styles/ContactPage.css
@@ -1,10 +1,9 @@
 :root{
-    --font-family: "Pathway Extreme", "Sans-serif";
     --width: 100%;
     --max-width: 1200px;
 }
 .contact-main-container{
-    font-family: var(--font-family);
+    font-family: "Pathway Extreme", "Sans-serif";
     width: var(--width);
     overflow: hidden;
 }
@@ -49,10 +48,13 @@
 }
 .contact-address{
 color: #3a506b;
+font-size: clamp(16px, 2vw, 17px);
 font-family: "Proxima Nova", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .custom-color{
  color: #3a506b;   
+ font-size: clamp(14px, 2vw, 17px);
+ 
 }
 
 .map-container{
