--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -1,6 +1,5 @@
 /* Container - 1 */
 :root {
-    --font-family: "Pathway Extreme", "Sans-serif";
     --width: 100%;
  }
  
@@ -8,7 +7,7 @@
     background: linear-gradient(135deg, #FF5901, #FF5901);
     height: 80vh;
     width: var(--width);
-    font-family: var(--font-family);
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 .custom-btn-1,
@@ -17,10 +16,14 @@
     transition: background 0.5s ease-in-out !important;
 }
 
-.custom-btn-1:hover,
-.custom-btn-2:hover {
+.custom-btn-1:hover
+ {
     background: black !important;
     color: #fff !important;
+}
+.custom-btn-2:hover{
+    background: #FFFFFF;
+    color: black;
 }
 
 /* Container - 2 */
@@ -53,10 +56,11 @@
 
 .custom-image{
     width: 100%;
-    max-width: 30rem;
-    height: 32rem;
+    max-width: 35rem;
+    height: 36rem;
     border: none;
     padding: 20px;
+    float: right;
     background-color: #c98bb9;
     box-shadow: #f4f0f0 2px 2px 5px 5px;
     transition: transform 0.5s ease-in-out, background 0.5s ease-in-out;
