--- a/src/Styles/ServicePage.css
+++ b/src/Styles/ServicePage.css
@@ -1,5 +1,4 @@
 :root{
-    --font-family: "Pathway Extreme", "Sans-serif";
     --width: 100%;
     --max-width: 1200px;
 }
@@ -10,15 +9,18 @@
     height: auto;
     font-family: 'Urbanist', sans-serif;
 }
+.service-container-1, .service-container-2, .service-container-3{
+    font-family: "Lucida Console", "Courier New", monospace;
+}
  
 .bg-sevice-img{
-    width: 550px;
-    height: auto;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     transition: transform 0.6s ease-in-out;
 }
 .bg-sevice-img:hover{
-    transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale(1.05);
 }
 .service-btn{
     position: relative;
@@ -56,7 +58,7 @@
     color: #fff;
 }
 .key-benefit-card {
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2); /* Soft shadow */
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);  
     transition: all 0.5s ease-in-out;
 }
 .key-benefit-card:hover {
@@ -69,7 +71,8 @@
 }
 
 .custom-col{
-    height: 250px;
+    min-height: 270px;
+    height: auto;
     padding: 30px;
     border: 10px solid #fff;
     position: relative;
@@ -83,18 +86,25 @@
     position: absolute;
     z-index: 1 !important;
     object-fit: cover;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 .serviceinfo-effect{
-    height: 120px;
+    max-height: 120px;
+    max-height: clamp(100px, 4vw, 120px);
+    height: 100%;
     position: relative;
-    margin: 28px auto;
+    margin: 45px auto;
     z-index: 2;
     background: rgba(210, 204, 229, 0.8);
     transition: all 0.5s ease-in-out;
 }
 .custom-color-h4, .custom-color-p {
-    color: #4f772d;
+    color: #2a4b0c;
+}
+.custom-color-h4{
+    font-size: clamp(1rem, 4vw, 1.335rem);
+}
+.custom-color-p{
+    font-size: clamp(0.8rem, 4vw, 1rem);
 }
 .custom-color-p{
     transform: translateY(50px);
@@ -115,8 +125,13 @@
 }
 
 @media(max-width: 768px){
-    .col-service h1{
-        display: flex;
-        
+    .service-container-1 h1{
+        font-size: 25px; 
+    }
+    .service-container-1 p{
+        font-size: 14px;
+    }
+    .service-container-1 h3{
+        font-size: 18px;
     }
 }
