--- a/src/Styles/Testimonial.css
+++ b/src/Styles/Testimonial.css
@@ -1,25 +1,42 @@
- .custom-swiper{
-    width: 400px  !important;
-    height: 250px !important;
-    display: flex !important; 
-    justify-content: center !important;
-     margin-bottom: 10px;
+.testimonial-section{
+   margin: 0;
+}
+ 
+ .testimonial-swiper {
+   max-height: 250px !important;
+   height: auto;
+   background: #f8f9fa;
+   border-radius: 10px;
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+   transition: transform 0.3s ease;
  }
- .swiper-button-prev, .swiper-button-next{
-      color: #f4e285 !important;
+ .testimonial-swiper:hover{
+   transform: scale(1.03);
  }
+ .swiper-button-prev,
+ .swiper-button-next {
+    color: #f4e285;
+ }
+
  .testimonial-container {
+    max-height: 250px !important;
+    height: auto;
     transition: transform 0.5s ease-in-out;
+    overflow: hidden;
+    border-radius: 10px;
+    border: 1px solid #ddd;
  }
- .testimonial-container:hover{
+
+ .testimonial-container:hover {
     transform: scale(1.03);
     cursor: pointer;
  }
- @media(max-width: 768px){
-   .custom-swiper{
-      width: 400px  !important;
-      display: flex !important; 
-      justify-content: center !important;
-   }
+
+ @media(max-width: 768px) {
+    .testimonial-swiper, .testimonial-container {
+      max-width: 100%;
+      width: 90%;
+      max-height: 350px !important;
+      height: auto;
+    }
  }
- 
